[package]
name = "docker-prometheus-exporter"
repository = "https://github.com/Calum4/docker-prometheus-exporter"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = "0.1.41"
prometheus-client = "0.23.1"
axum-client-ip = "1.0.0"
bollard = "0.18.1"
futures = "0.3.31"

[dependencies.tokio]
version = "1.44.1"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.tower-http]
version = "0.6.2"
features = ["add-extension"]

[dependencies.axum]
version = "0.8.3"
features = ["macros"]
