[package]
name = "docker-prometheus-exporter"
version = "1.1.1"
authors = ["Calum4"]
edition = "2024"
description = "Exports basic metrics from Docker for scraping by Prometheus"
readme = "README.md"
repository = "https://github.com/Calum4/docker-prometheus-exporter"
license = "MIT OR Apache-2.0"
keywords = ["docker", "prometheus", "prometheus-exporter", "prometheus-metrics", "metrics"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
tracing = "0.1.41"
prometheus-client = "0.23.1"
axum-client-ip = "1.0.0"
bollard = "0.18.1"
futures = "0.3.31"

[dependencies.tokio]
version = "1.45.0"
features = ["rt", "macros", "rt-multi-thread", "signal"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.tower-http]
version = "0.6.4"
features = ["add-extension"]

[dependencies.axum]
version = "0.8.4"
features = ["macros"]
