[package]
name = "docker-prometheus-exporter"
version = "1.1.3"
authors = ["Calum4"]
edition = "2024"
description = "Exports basic metrics from Docker for scraping by Prometheus"
readme = "README.md"
repository = "https://github.com/Calum4/docker-prometheus-exporter"
license = "MIT OR Apache-2.0"
keywords = ["docker", "prometheus", "prometheus-exporter", "prometheus-metrics", "metrics"]
categories = ["command-line-utilities"]
publish = true

[dependencies]
tracing = "0.1.41"
prometheus-client = "0.24.0"
# Awaiting next release after v1.1.3
axum-client-ip = {git = "https://github.com/imbolc/axum-client-ip.git", rev = "6d970edce4f7f0d1782e328fe688e021c42f1f3e"}
bollard = "0.19.2"
futures = "0.3.31"
thiserror = "2.0.16"

[dependencies.tokio]
version = "1.47.1"
features = ["rt", "macros", "rt-multi-thread", "signal", "sync"]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]

[dependencies.tower-http]
version = "0.6.6"
features = ["add-extension"]

[dependencies.axum]
version = "0.8.4"
features = ["macros"]

[dependencies.clap]
version = "4.5.46"
features = ["derive", "env", "string"]

[dev-dependencies]
reqwest = "0.12.23"
rand = "0.9.2"
regex = "1.11.2"
